--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "belvo": "^0.17.0",
     "core-js": "^3.6.5",
+    "qs": "^6.10.1",
+    "save": "^2.4.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
